--- a/productos.css
+++ b/productos.css
@@ -4,8 +4,10 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 
-	
 }
+
+
+
 
 .header{
     height: 30vh;
@@ -236,6 +238,11 @@ section {
   
   }
 
+  #first-img{
+      height: 30vh;
+      background-color: #fff;
+  }
+
   #image1{
       width: 350px;
       float: left;
@@ -244,8 +251,15 @@ section {
   #text1{
       text-align: center;
       width: 80%;
+      font-family: 'Courier New', Courier, monospace;
+      text-decoration: none;
   }
   
+  #second-img{
+      height: 30vh;
+      background-color: #fff;
+  }
+
   #image2{
       width: 350px;
       float: right;
@@ -254,6 +268,7 @@ section {
   #text2{
       text-align: center;
       width: 80%;
+      font-family: 'Courier New', Courier, monospace;
       
   }
   /* If you don't want the footer to be responsive, remove these media queries */
@@ -317,4 +332,28 @@ section {
 		margin-left: 0;
 	}
   
+    #text2{
+        text-align: center;
+        width: 80%;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 20px;
+    }
+    #text1{
+        text-align: center;
+        width: 80%;
+        font-family: 'Courier New', Courier, monospace;
+        text-decoration: none;
+        font-size: 20px;
+    }
+
+    #first-img{
+        height: 60vh;
+        background-color: #fff;
+    }
+
+    #second-img{
+        height: 60vh;
+        background-color: #fff;
+    }
+
   }
